fail_crate/tests/multiple_field_new.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(default)]
    #[new(default)]
    x: u32,
}

fn main() {}
